pwa(ios+offline): apple meta tags + offline fallback

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="theme-color" content="#8B5CF6" />
     <meta name="color-scheme" content="light dark" />
 
+    <!-- iOS PWA: enable standalone + status bar styling -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Timora">
+
     <title>Timora — Small Habits, Big Momentum</title>
 
     <!-- Inter for luxury typography -->
@@ -21,7 +26,8 @@
 
     <!-- Icons -->
     <link rel="icon" href="/timora-icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/timora-icon.svg" />
+    <!-- iOS home screen icon (PNG) -->
+    <link rel="apple-touch-icon" href="/icons/apple-icon-180.png" />
 
     <style>
       html, body { height: 100%; }
