--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,6 +7,9 @@
     <!-- Brand colors / PWA tint -->
     <meta name="theme-color" content="#8B5CF6" />
     <meta name="color-scheme" content="light dark" />
+
+    <!-- Mobile web app (Chrome/Android) -->
+    <meta name="mobile-web-app-capable" content="yes">
 
     <!-- iOS PWA: enable standalone + status bar styling -->
     <meta name="apple-mobile-web-app-capable" content="yes">
